2011-08-17  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Handler.h: Register OutputThread to OutputDispatcher.
	* include/network/Handler.tcc: Likewise.

	* include/network/OutputThread.h: Don't care about k1, k2.
	Just read from my cmq untill reaching MAX_READ or a NULL model,
	then send the result back.
	* src/network/OutputThread.cpp: Likewise.

	* include/network/BaseDispatcher.h: Typo.

2011-08-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Has its own input_queue and read from that.
	* src/network/JoinThread.cpp: Likewise.

	* include/solver/RelSatSolver.h: Responsible for ignoring up to k1 models,
	only returns models from k1 to k2.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/BaseDispatcher.h: New file.
	* include/network/Makefile.am: Add BaseDispatcher.h
	* include/network/OutputDispatcher.h: Inherit from BaseDispatcher.

	* testsuite/testOutputDispatcher.cpp: Remove.
	* testsuite/testDispatcher.cpp: Add.
	* testsuite/Makefile.am: Likewise.

	* include/network/OutputThread.h: Remove fixed path from OutputThread.
	Register to OutputDispatcher after getting notification from Handler.
	* src/network/OutputThread.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.

2011-08-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBlockingAsio.cpp: Add new test case.
	* testsuite/SimpleClient.h: Likewise.
	* testsuite/SimpleClient.cpp: Likewise.
	* testsuite/SimpleServer.h: Likewise.
	* testsuite/SimpleServer.cpp: Likewise.

2011-08-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueueHelper.h: Add a helper method for
	receiving models.

	* include/network/Handler.tcc: Clean up.
	* testsuite/testOutputDispatcher.cpp: Likewise.

	* src/network/OutputDispatcher.cpp: Fix debugging information.

	* src/network/OutputThread.cpp: Receive models from output_dispatcher.

	* src/network/Server.cpp: Fix bug: multiple output_dispatcher.
